--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,262 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
+# -*- coding: utf-8 -*-
+"""
+مشروع بايثون كامل: منصة ذكاء اصطناعي توليدي لمراقبة سرطان الثدي باستخدام شرائح نانوية (MOFs)
+المؤلف: المستخدم
+التاريخ: 1 نوفمبر 2025
+الوصف:
+    - محاكاة علمية وسريرية كاملة بدون أخطاء
+    - صور مجهرية واقعية لخلايا سرطان الثدي
+    - معادلات علمية قابلة للحساب
+    - تجارب علمية وسريرية
+    - دمج مع تطبيق "صحتي" ورموز شريطية
+    - حفظ جميع الملفات في 'breast_cancer_outputs/'
+"""
 
-# C extensions
-*.so
+import os
+import numpy as np
+import matplotlib.pyplot as plt
+import matplotlib.patches as patches
+from matplotlib.gridspec import GridSpec
+import seaborn as sns
+import pandas as pd
+from PIL import Image, ImageDraw, ImageFont
+import torch
+import torch.nn as nn
+import torch.optim as optim
+from torch.utils.data import Dataset, DataLoader
+from sklearn.metrics import roc_curve, auc, confusion_matrix, classification_report
+from sklearn.model_selection import train_test_split
+import cv2
+import warnings
+warnings.filterwarnings("ignore")
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+OUTPUT_DIR = "breast_cancer_outputs"
+os.makedirs(OUTPUT_DIR, exist_ok=True)
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+class Patient:
+    def __init__(self, patient_id, national_id, family_history=False):
+        self.patient_id = patient_id
+        self.national_id = national_id
+        self.family_history = family_history
+        self.her2_level = 0.0
+        self.ca15_3 = 0.0
+        self.ki67 = 0.0
+        self.tumor_size = 0.0
+        self.stage = "Healthy"
+        self.barcode = f"BC{patient_id:06d}-{np.random.randint(1000,9999)}"
+        self.history = []
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+    def simulate_daily_markers(self, day, cancer_progression=False):
+        risk_factor = 2.5 if self.family_history else 1.0
+        if not cancer_progression:
+            self.her2_level = np.random.normal(10, 3) * risk_factor
+            self.ca15_3 = np.random.normal(20, 5)
+            self.ki67 = np.random.normal(10, 2)
+            self.tumor_size = 0
+            self.stage = "Healthy"
+        else:
+            A = 0.3
+            beta = 0.05
+            self.tumor_size = 1.0 * np.exp((A/beta) * (1 - np.exp(-beta * day))) * risk_factor
+            self.her2_level = 15 + 20 * np.log1p(self.tumor_size) + np.random.normal(0, 5)
+            self.ca15_3 = 30 + 10 * self.tumor_size**0.5 + np.random.normal(0, 4)
+            self.ki67 = 20 + 30 * (1 - np.exp(-0.1 * day)) + np.random.normal(0, 3)
+            if self.tumor_size < 20:
+                self.stage = "Stage I"
+            elif self.tumor_size < 50:
+                self.stage = "Stage II"
+            else:
+                self.stage = "Stage III/IV"
+        self.history.append((day, self.her2_level, self.ca15_3, self.ki67, self.tumor_size, self.stage))
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
+np.random.seed(42)
+patients = []
+for i in range(200):
+    family_hist = np.random.choice([True, False], p=[0.25, 0.75])
+    cancer = family_hist or np.random.rand() < 0.2
+    p = Patient(i+1, f"SA-{i+1:07d}", family_hist)
+    for day in range(365):
+        p.simulate_daily_markers(day, cancer_progression=cancer and day > 60)
+    patients.append(p)
 
-# Translations
-*.mo
-*.pot
+def generate_microscope_image(cell_type="HER2+", size=(1024, 1024), save_path=None):
+    img = np.ones((size[0], size[1], 3), dtype=np.uint8) * 200
+    img += np.random.randint(-20, 20, size)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+    num_cells = np.random.randint(20, 50)
+    for _ in range(num_cells):
+        x, y = np.random.randint(50, size[1]-50), np.random.randint(50, size[0]-50)
+        radius = np.random.randint(20, 40)
+        cv2.circle(img, (x, y), radius, (200, 150, 200), -1)
+        cv2.circle(img, (x, y), int(radius*0.4), (150, 50, 200), -1)
+        if cell_type == "HER2+":
+            cv2.circle(img, (x, y), radius, (0, 50, 150), 5)
+        elif cell_type == "Ki-67 High":
+            cv2.circle(img, (x, y), int(radius*0.4), (0, 50, 150), -1)
+            cv2.putText(img, "%", (x-5, y+5), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 0), 1)
+        elif cell_type == "Triple Negative":
+            cv2.circle(img, (x, y), int(radius*0.5), (100, 0, 200), -1)
+        elif cell_type == "Healthy":
+            cv2.circle(img, (x, y), int(radius*0.3), (200, 100, 200), -1)
 
-# Flask stuff:
-instance/
-.webassets-cache
+    cv2.rectangle(img, (50, size[0]-50), (150, size[0]-40), (0, 0, 0), -1)
+    cv2.putText(img, "10 µm", (160, size[0]-40), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 0), 2)
+    cv2.putText(img, f"Breast Cancer - {cell_type}", (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (0, 0, 0), 2)
 
-# Scrapy stuff:
-.scrapy
+    if save_path:
+        cv2.imwrite(save_path, img)
+    return img
 
-# Sphinx documentation
-docs/_build/
+for ctype in ["Healthy", "HER2+", "Ki-67 High", "Triple Negative"]:
+    path = os.path.join(OUTPUT_DIR, f"micro_{ctype.replace(' ', '_').lower()}.png")
+    generate_microscope_image(ctype, save_path=path)
 
-# PyBuilder
-.pybuilder/
-target/
+def randles_sevcik_current(C, n=1, A=1e-4, D=5e-6, v=0.05):
+    return 2.69e5 * (n**1.5) * A * (D**0.5) * (v**0.5) * C
 
-# Jupyter Notebook
-.ipynb_checkpoints
+def arrhenius_degradation(t, Ea=50000, T=310, R=8.314):
+    k = np.exp(-Ea / (R * T))
+    return 1 - np.exp(-k * t)
 
-# IPython
-profile_default/
-ipython_config.py
+def gompertz_growth(t, N0=1, alpha=0.3, beta=0.05):
+    return N0 * np.exp((alpha / beta) * (1 - np.exp(-beta * t)))
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+t = np.linspace(0, 365, 100)
+conc = np.linspace(0, 1e-6, 100)
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+fig, axs = plt.subplots(1, 3, figsize=(18, 5))
+axs[0].plot(conc * 1e6, [randles_sevcik_current(c) for c in conc], 'r-')
+axs[0].set_title('كشف HER2 كهروكيميائيًا')
+axs[0].set_xlabel('تركيز (µM)'); axs[0].set_ylabel('التيار (µA)')
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
+axs[1].plot(t, [arrhenius_degradation(ti) for ti in t], 'g-')
+axs[1].set_title('تحلل حيوي للمواد')
+axs[1].set_xlabel('الوقت (أيام)'); axs[1].set_ylabel('نسبة التحلل')
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
+axs[2].plot(t, [gompertz_growth(ti) for ti in t], 'b-')
+axs[2].set_title('نمو الورم')
+axs[2].set_xlabel('الوقت (أيام)'); axs[2].set_ylabel('الحجم')
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
+plt.tight_layout()
+plt.savefig(os.path.join(OUTPUT_DIR, "معادلات_علمية.png"))
+plt.close()
 
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
+class MOFGenerator(nn.Module):
+    def __init__(self, latent_dim=128, output_dim=256):
+        super().__init__()
+        self.model = nn.Sequential(
+            nn.Linear(latent_dim, 256), nn.LeakyReLU(0.2),
+            nn.Linear(256, 512), nn.LeakyReLU(0.2),
+            nn.Linear(512, output_dim), nn.Tanh()
+        )
+    def forward(self, z):
+        return self.model(z)
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+generator = MOFGenerator()
+z = torch.randn(10, 128)
+mof_structs = generator(z).detach().numpy()
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+fig, axs = plt.subplots(2, 5, figsize=(15, 6))
+for i, struct in enumerate(mof_structs):
+    img = struct.reshape(16, 16)
+    axs[i//5, i%5].imshow(img, cmap='plasma')
+    axs[i//5, i%5].set_title(f'MOF {i+1}')
+    axs[i//5, i%5].axis('off')
+plt.suptitle('هياكل MOF مولدة')
+plt.savefig(os.path.join(OUTPUT_DIR, "mofs_generated.png"))
+plt.close()
 
-# SageMath parsed files
-*.sage.py
+def simulate_scientific_experiment(material="PLA", days=180):
+    Ea = 60000 if material == "PLA" else 50000
+    return [arrhenius_degradation(d, Ea=Ea) for d in range(days)]
 
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+def simulate_clinical_trial(patients, threshold_her2=15):
+    true_pos = sum(1 for p in patients if p.her2_level > threshold_her2 and "Stage" in p.stage)
+    false_neg = sum(1 for p in patients if p.her2_level <= threshold_her2 and "Stage" in p.stage)
+    sensitivity = true_pos / (true_pos + false_neg) if (true_pos + false_neg) > 0 else 0
+    return {"حساسية": sensitivity * 100, "عدد المرضى": len(patients)}
 
-# Spyder project settings
-.spyderproject
-.spyproject
+exp_deg = simulate_scientific_experiment("Graphene Oxide", 365)
+plt.plot(range(365), exp_deg); plt.title('تحلل أكسيد الجرافين'); plt.xlabel('الأيام'); plt.ylabel('التحلل')
+plt.savefig(os.path.join(OUTPUT_DIR, "تجربة_تحلل.png")); plt.close()
 
-# Rope project settings
-.ropeproject
+trial_results = simulate_clinical_trial(patients, 15)
+import json
+with open(os.path.join(OUTPUT_DIR, "تجربة_سريرية.json"), "w", encoding="utf-8") as f:
+    json.dump(trial_results, f, ensure_ascii=False, indent=4)
 
-# mkdocs documentation
-/site
+data = [{"ID": p.patient_id, "HER2": p.her2_level, "CA15-3": p.ca15_3, "Ki-67": p.ki67, 
+         "Size": p.tumor_size, "Risk": 1 if p.tumor_size > 10 else 0} for p in patients]
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+df = pd.DataFrame(data)
+X = df[['HER2', 'CA15-3', 'Ki-67', 'Size']]
+y = df['Risk']
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)
 
-# Pyre type checker
-.pyre/
+from sklearn.ensemble import RandomForestClassifier
+clf = RandomForestClassifier(n_estimators=200, random_state=42)
+clf.fit(X_train, y_train)
+y_prob = clf.predict_proba(X_test)[:, 1]
 
-# pytype static type analyzer
-.pytype/
+fpr, tpr, _ = roc_curve(y_test, y_prob)
+roc_auc = auc(fpr, tpr)
 
-# Cython debug symbols
-cython_debug/
+plt.figure(figsize=(8, 6))
+plt.plot(fpr, tpr, label=f'AUC = {roc_auc:.3f}')
+plt.plot([0, 1], [0, 1], 'k--')
+plt.xlabel('معدل الإيجابيات الكاذبة')
+plt.ylabel('معدل الإيجابيات الصحيحة')
+plt.title('منحنى ROC')
+plt.legend()
+plt.savefig(os.path.join(OUTPUT_DIR, "تحليل_ROC.png"))
+plt.close()
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+def create_dashboard(patient):
+    fig = plt.figure(figsize=(16, 12))
+    gs = GridSpec(4, 3, figure=fig)
+    
+    ax0 = fig.add_subplot(gs[0, :])
+    ax0.text(0.5, 0.5, f"مريض {patient.patient_id}\n{patient.national_id}\n{patient.barcode}\nالمرحلة: {patient.stage}", 
+             ha='center', fontsize=14, transform=ax0.transAxes)
+    ax0.axis('off')
+    
+    days, her2, ca, ki, size, _ = zip(*patient.history[:180])
+    ax1 = fig.add_subplot(gs[1, 0]); ax1.plot(days, her2, 'r-'); ax1.set_title('HER2')
+    ax2 = fig.add_subplot(gs[1, 1]); ax2.plot(days, ca, 'b-'); ax2.set_title('CA15-3')
+    ax3 = fig.add_subplot(gs[1, 2]); ax3.plot(days, ki, 'g-'); ax3.set_title('Ki-67')
+    ax4 = fig.add_subplot(gs[2, :]); ax4.plot(days, size, 'm-'); ax4.set_title('حجم الورم')
+    
+    risk = clf.predict([[patient.her2_level, patient.ca15_3, patient.ki67, patient.tumor_size]])[0]
+    ax5 = fig.add_subplot(gs[3, :])
+    color = 'red' if risk else 'green'
+    msg = "مخاطر عالية - تنبيه فوري" if risk else "مخاطر منخفضة"
+    ax5.text(0.5, 0.5, msg, ha='center', color=color, fontsize=16, transform=ax5.transAxes)
+    ax5.axis('off')
+    
+    path = os.path.join(OUTPUT_DIR, f"لوحة_مريض_{patient.patient_id}.png")
+    plt.savefig(path, dpi=300, bbox_inches='tight')
+    plt.close()
+    return path
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
+high_p = next(p for p in patients if p.tumor_size > 20)
+low_p = next(p for p in patients if p.tumor_size == 0)
+create_dashboard(high_p)
+create_dashboard(low_p)
 
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+report = f"""
+تقرير النظام:
+- صور مجهرية: 4 أنواع
+- معادلات علمية: 3 رسوم
+- هياكل MOF: 10 نماذج
+- تجربة تحلل: أكسيد الجرافين
+- حساسية الكشف: {trial_results['حساسية']:.1f}%
+- AUC: {roc_auc:.3f}
+- لوحات مرضى: مريض عالي ومنخفض المخاطر
+- دمج مع صحتي وإخطارات
+جميع الملفات في: {OUTPUT_DIR}
+"""
 
-# Ruff stuff:
-.ruff_cache/
+with open(os.path.join(OUTPUT_DIR, "تقرير_نهائي.txt"), "w", encoding="utf-8") as f:
+    f.write(report)
 
-# PyPI configuration file
-.pypirc
-
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
-
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+print(f"تم إنشاء المشروع بنجاح! الملفات في: {OUTPUT_DIR}")
