--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,29 @@
 # -*- coding: utf-8 -*-
 """
-مشروع بايثون كامل: منصة ذكاء اصطناعي توليدي لمراقبة سرطان الثدي باستخدام شرائح نانوية (MOFs)
-المؤلف: المستخدم
+مشروع بايثون كامل: منصة ذكاء اصطناعي توليدي لمراقبة سرطان الثدي باستخدام MOFs
 التاريخ: 1 نوفمبر 2025
-الوصف:
-    - محاكاة علمية وسريرية كاملة بدون أخطاء
-    - صور مجهرية واقعية لخلايا سرطان الثدي
-    - معادلات علمية قابلة للحساب
-    - تجارب علمية وسريرية
-    - دمج مع تطبيق "صحتي" ورموز شريطية
-    - حفظ جميع الملفات في 'breast_cancer_outputs/'
 """
 
 import os
 import numpy as np
 import matplotlib.pyplot as plt
-import matplotlib.patches as patches
 from matplotlib.gridspec import GridSpec
-import seaborn as sns
 import pandas as pd
-from PIL import Image, ImageDraw, ImageFont
 import torch
 import torch.nn as nn
-import torch.optim as optim
-from torch.utils.data import Dataset, DataLoader
-from sklearn.metrics import roc_curve, auc, confusion_matrix, classification_report
+from sklearn.metrics import roc_curve, auc
 from sklearn.model_selection import train_test_split
+from sklearn.ensemble import RandomForestClassifier
 import cv2
+import json
 import warnings
 warnings.filterwarnings("ignore")
 
+# إعداد المجلد
 OUTPUT_DIR = "breast_cancer_outputs"
 os.makedirs(OUTPUT_DIR, exist_ok=True)
 
+# كلاس المريض
 class Patient:
     def __init__(self, patient_id, national_id, family_history=False):
         self.patient_id = patient_id
@@ -69,6 +60,7 @@ class Patient:
                 self.stage = "Stage III/IV"
         self.history.append((day, self.her2_level, self.ca15_3, self.ki67, self.tumor_size, self.stage))
 
+# إنشاء 200 مريض
 np.random.seed(42)
 patients = []
 for i in range(200):
@@ -79,13 +71,15 @@ for i in range(200):
         p.simulate_daily_markers(day, cancer_progression=cancer and day > 60)
     patients.append(p)
 
+# دالة توليد الصور المجهرية
 def generate_microscope_image(cell_type="HER2+", size=(1024, 1024), save_path=None):
     img = np.ones((size[0], size[1], 3), dtype=np.uint8) * 200
-    img += np.random.randint(-20, 20, size)
+    img += np.random.randint(-20, 20, size=(size[0], size[1], 3))
 
     num_cells = np.random.randint(20, 50)
     for _ in range(num_cells):
-        x, y = np.random.randint(50, size[1]-50), np.random.randint(50, size[0]-50)
+        x = np.random.randint(50, size[1]-50)
+        y = np.random.randint(50, size[0]-50)
         radius = np.random.randint(20, 40)
         cv2.circle(img, (x, y), radius, (200, 150, 200), -1)
         cv2.circle(img, (x, y), int(radius*0.4), (150, 50, 200), -1)
@@ -100,163 +94,153 @@ def generate_microscope_image(cell_type="HER2+", size=(1024, 1024), save_path=No
             cv2.circle(img, (x, y), int(radius*0.3), (200, 100, 200), -1)
 
     cv2.rectangle(img, (50, size[0]-50), (150, size[0]-40), (0, 0, 0), -1)
-    cv2.putText(img, "10 µm", (160, size[0]-40), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 0), 2)
+    cv2.putText(img, "10 µm", (160, size[0]-40), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)
     cv2.putText(img, f"Breast Cancer - {cell_type}", (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (0, 0, 0), 2)
 
     if save_path:
         cv2.imwrite(save_path, img)
     return img
 
+# حفظ الصور
 for ctype in ["Healthy", "HER2+", "Ki-67 High", "Triple Negative"]:
     path = os.path.join(OUTPUT_DIR, f"micro_{ctype.replace(' ', '_').lower()}.png")
     generate_microscope_image(ctype, save_path=path)
 
-def randles_sevcik_current(C, n=1, A=1e-4, D=5e-6, v=0.05):
-    return 2.69e5 * (n**1.5) * A * (D**0.5) * (v**0.5) * C
-
-def arrhenius_degradation(t, Ea=50000, T=310, R=8.314):
-    k = np.exp(-Ea / (R * T))
-    return 1 - np.exp(-k * t)
-
-def gompertz_growth(t, N0=1, alpha=0.3, beta=0.05):
-    return N0 * np.exp((alpha / beta) * (1 - np.exp(-beta * t)))
+# المعادلات العلمية
+def randles_sevcik_current(C): return 2.69e5 * (1**1.5) * 1e-4 * (5e-6**0.5) * (0.05**0.5) * C
+def arrhenius_degradation(t): return 1 - np.exp(-np.exp(-50000 / (8.314 * 310)) * t)
+def gompertz_growth(t): return np.exp((0.3 / 0.05) * (1 - np.exp(-0.05 * t)))
 
 t = np.linspace(0, 365, 100)
 conc = np.linspace(0, 1e-6, 100)
 
 fig, axs = plt.subplots(1, 3, figsize=(18, 5))
 axs[0].plot(conc * 1e6, [randles_sevcik_current(c) for c in conc], 'r-')
-axs[0].set_title('كشف HER2 كهروكيميائيًا')
-axs[0].set_xlabel('تركيز (µM)'); axs[0].set_ylabel('التيار (µA)')
+axs[0].set_title('كشف HER2 كهروكيميائيًا'); axs[0].set_xlabel('تركيز (µM)'); axs[0].set_ylabel('التيار (µA)')
 
 axs[1].plot(t, [arrhenius_degradation(ti) for ti in t], 'g-')
-axs[1].set_title('تحلل حيوي للمواد')
-axs[1].set_xlabel('الوقت (أيام)'); axs[1].set_ylabel('نسبة التحلل')
+axs[1].set_title('تحلل حيوي'); axs[1].set_xlabel('أيام'); axs[1].set_ylabel('نسبة التحلل')
 
 axs[2].plot(t, [gompertz_growth(ti) for ti in t], 'b-')
-axs[2].set_title('نمو الورم')
-axs[2].set_xlabel('الوقت (أيام)'); axs[2].set_ylabel('الحجم')
+axs[2].set_title('نمو الورم'); axs[2].set_xlabel('أيام'); axs[2].set_ylabel('الحجم')
 
 plt.tight_layout()
-plt.savefig(os.path.join(OUTPUT_DIR, "معادلات_علمية.png"))
+plt.savefig(os.path.join(OUTPUT_DIR, "معادلات_علمية.png"), dpi=300)
 plt.close()
 
+# مولد MOF
 class MOFGenerator(nn.Module):
-    def __init__(self, latent_dim=128, output_dim=256):
+    def __init__(self):
         super().__init__()
-        self.model = nn.Sequential(
-            nn.Linear(latent_dim, 256), nn.LeakyReLU(0.2),
+        self.net = nn.Sequential(
+            nn.Linear(128, 256), nn.LeakyReLU(0.2),
             nn.Linear(256, 512), nn.LeakyReLU(0.2),
-            nn.Linear(512, output_dim), nn.Tanh()
+            nn.Linear(512, 256), nn.Tanh()
         )
-    def forward(self, z):
-        return self.model(z)
+    def forward(self, z): return self.net(z)
 
-generator = MOFGenerator()
+gen = MOFGenerator()
 z = torch.randn(10, 128)
-mof_structs = generator(z).detach().numpy()
+mofs = gen(z).detach().numpy()
 
 fig, axs = plt.subplots(2, 5, figsize=(15, 6))
-for i, struct in enumerate(mof_structs):
-    img = struct.reshape(16, 16)
-    axs[i//5, i%5].imshow(img, cmap='plasma')
-    axs[i//5, i%5].set_title(f'MOF {i+1}')
-    axs[i//5, i%5].axis('off')
+for i, m in enumerate(mofs):
+    ax = axs[i//5, i%5]
+    ax.imshow(m.reshape(16, 16), cmap='plasma')
+    ax.set_title(f'MOF {i+1}')
+    ax.axis('off')
 plt.suptitle('هياكل MOF مولدة')
-plt.savefig(os.path.join(OUTPUT_DIR, "mofs_generated.png"))
+plt.savefig(os.path.join(OUTPUT_DIR, "mofs_generated.png"), dpi=300)
 plt.close()
 
-def simulate_scientific_experiment(material="PLA", days=180):
-    Ea = 60000 if material == "PLA" else 50000
-    return [arrhenius_degradation(d, Ea=Ea) for d in range(days)]
+# تجربة علمية
+exp = [arrhenius_degradation(d) for d in range(365)]
+plt.plot(range(365), exp, 'm-')
+plt.title('تحلل أكسيد الجرافين'); plt.xlabel('أيام'); plt.ylabel('التحلل')
+plt.grid(True, alpha=0.3)
+plt.savefig(os.path.join(OUTPUT_DIR, "تجربة_تحلل.png"), dpi=300)
+plt.close()
 
-def simulate_clinical_trial(patients, threshold_her2=15):
-    true_pos = sum(1 for p in patients if p.her2_level > threshold_her2 and "Stage" in p.stage)
-    false_neg = sum(1 for p in patients if p.her2_level <= threshold_her2 and "Stage" in p.stage)
-    sensitivity = true_pos / (true_pos + false_neg) if (true_pos + false_neg) > 0 else 0
-    return {"حساسية": sensitivity * 100, "عدد المرضى": len(patients)}
+# دالة مساعدة
+def get_max_her2(p): return max(h[1] for h in p.history) if p.history else 0
 
-exp_deg = simulate_scientific_experiment("Graphene Oxide", 365)
-plt.plot(range(365), exp_deg); plt.title('تحلل أكسيد الجرافين'); plt.xlabel('الأيام'); plt.ylabel('التحلل')
-plt.savefig(os.path.join(OUTPUT_DIR, "تجربة_تحلل.png")); plt.close()
+# تجربة سريرية
+def clinical_trial(pats, thresh=15):
+    tp = fn = 0
+    for p in pats:
+        is_cancer = "Stage" in p.stage
+        if get_max_her2(p) > thresh and is_cancer: tp += 1
+        elif get_max_her2(p) <= thresh and is_cancer: fn += 1
+    sens = tp / (tp + fn) * 100 if (tp + fn) > 0 else 0
+    return {"حساسية": sens, "عدد المرضى": len(pats)}
 
-trial_results = simulate_clinical_trial(patients, 15)
-import json
+results = clinical_trial(patients)
 with open(os.path.join(OUTPUT_DIR, "تجربة_سريرية.json"), "w", encoding="utf-8") as f:
-    json.dump(trial_results, f, ensure_ascii=False, indent=4)
+    json.dump(results, f, ensure_ascii=False, indent=4)
 
-data = [{"ID": p.patient_id, "HER2": p.her2_level, "CA15-3": p.ca15_3, "Ki-67": p.ki67, 
-         "Size": p.tumor_size, "Risk": 1 if p.tumor_size > 10 else 0} for p in patients]
-
+# بيانات التدريب
+data = [{"HER2": get_max_her2(p), "CA15-3": p.ca15_3, "Ki-67": p.ki67, "Size": p.tumor_size, "Risk": int(p.tumor_size > 10)} for p in patients]
 df = pd.DataFrame(data)
-X = df[['HER2', 'CA15-3', 'Ki-67', 'Size']]
-y = df['Risk']
+X = df[["HER2", "CA15-3", "Ki-67", "Size"]]
+y = df["Risk"]
 X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)
 
-from sklearn.ensemble import RandomForestClassifier
 clf = RandomForestClassifier(n_estimators=200, random_state=42)
 clf.fit(X_train, y_train)
 y_prob = clf.predict_proba(X_test)[:, 1]
-
 fpr, tpr, _ = roc_curve(y_test, y_prob)
 roc_auc = auc(fpr, tpr)
 
-plt.figure(figsize=(8, 6))
+plt.figure(figsize=(8,6))
 plt.plot(fpr, tpr, label=f'AUC = {roc_auc:.3f}')
-plt.plot([0, 1], [0, 1], 'k--')
-plt.xlabel('معدل الإيجابيات الكاذبة')
-plt.ylabel('معدل الإيجابيات الصحيحة')
-plt.title('منحنى ROC')
-plt.legend()
-plt.savefig(os.path.join(OUTPUT_DIR, "تحليل_ROC.png"))
+plt.plot([0,1],[0,1],'k--')
+plt.xlabel('FPR'); plt.ylabel('TPR'); plt.title('ROC')
+plt.legend(); plt.grid(alpha=0.3)
+plt.savefig(os.path.join(OUTPUT_DIR, "تحليل_ROC.png"), dpi=300)
 plt.close()
 
-def create_dashboard(patient):
-    fig = plt.figure(figsize=(16, 12))
+# لوحة تحكم
+def dashboard(p):
+    fig = plt.figure(figsize=(16,12))
     gs = GridSpec(4, 3, figure=fig)
-    
-    ax0 = fig.add_subplot(gs[0, :])
-    ax0.text(0.5, 0.5, f"مريض {patient.patient_id}\n{patient.national_id}\n{patient.barcode}\nالمرحلة: {patient.stage}", 
-             ha='center', fontsize=14, transform=ax0.transAxes)
+    ax0 = fig.add_subplot(gs[0,:])
+    ax0.text(0.5, 0.5, f"مريض {p.patient_id}\n{p.national_id}\n{p.barcode}\nالمرحلة: {p.stage}", ha='center', va='center', fontsize=14, transform=ax0.transAxes)
     ax0.axis('off')
-    
-    days, her2, ca, ki, size, _ = zip(*patient.history[:180])
-    ax1 = fig.add_subplot(gs[1, 0]); ax1.plot(days, her2, 'r-'); ax1.set_title('HER2')
-    ax2 = fig.add_subplot(gs[1, 1]); ax2.plot(days, ca, 'b-'); ax2.set_title('CA15-3')
-    ax3 = fig.add_subplot(gs[1, 2]); ax3.plot(days, ki, 'g-'); ax3.set_title('Ki-67')
-    ax4 = fig.add_subplot(gs[2, :]); ax4.plot(days, size, 'm-'); ax4.set_title('حجم الورم')
-    
-    risk = clf.predict([[patient.her2_level, patient.ca15_3, patient.ki67, patient.tumor_size]])[0]
-    ax5 = fig.add_subplot(gs[3, :])
-    color = 'red' if risk else 'green'
-    msg = "مخاطر عالية - تنبيه فوري" if risk else "مخاطر منخفضة"
-    ax5.text(0.5, 0.5, msg, ha='center', color=color, fontsize=16, transform=ax5.transAxes)
+
+    days, her2, ca, ki, size, _ = zip(*p.history[:180])
+    fig.add_subplot(gs[1,0]).plot(days, her2, 'r-'); plt.title('HER2')
+    fig.add_subplot(gs[1,1]).plot(days, ca, 'b-'); plt.title('CA15-3')
+    fig.add_subplot(gs[1,2]).plot(days, ki, 'g-'); plt.title('Ki-67')
+    fig.add_subplot(gs[2,:]).plot(days, size, 'm-'); plt.title('حجم الورم')
+
+    risk = clf.predict([[get_max_her2(p), p.ca15_3, p.ki67, p.tumor_size]])[0]
+    ax5 = fig.add_subplot(gs[3,:])
+    ax5.text(0.5, 0.5, "مخاطر عالية - تنبيه فوري" if risk else "مخاطر منخفضة", ha='center', color='red' if risk else 'green', fontsize=16, transform=ax5.transAxes)
     ax5.axis('off')
-    
-    path = os.path.join(OUTPUT_DIR, f"لوحة_مريض_{patient.patient_id}.png")
+
+    path = os.path.join(OUTPUT_DIR, f"لوحة_مريض_{p.patient_id}.png")
     plt.savefig(path, dpi=300, bbox_inches='tight')
     plt.close()
     return path
 
-high_p = next(p for p in patients if p.tumor_size > 20)
-low_p = next(p for p in patients if p.tumor_size == 0)
-create_dashboard(high_p)
-create_dashboard(low_p)
+high_p = next((p for p in patients if p.tumor_size > 20), patients[0])
+low_p = next((p for p in patients if p.tumor_size == 0), patients[-1])
+dashboard(high_p)
+dashboard(low_p)
 
+# تقرير
 report = f"""
 تقرير النظام:
 - صور مجهرية: 4 أنواع
 - معادلات علمية: 3 رسوم
 - هياكل MOF: 10 نماذج
-- تجربة تحلل: أكسيد الجرافين
-- حساسية الكشف: {trial_results['حساسية']:.1f}%
+- حساسية الكشف: {results['حساسية']:.1f}%
 - AUC: {roc_auc:.3f}
-- لوحات مرضى: مريض عالي ومنخفض المخاطر
-- دمج مع صحتي وإخطارات
-جميع الملفات في: {OUTPUT_DIR}
+- لوحات مرضى: عالي ومنخفض المخاطر
+- دمج مع تطبيق صحتي
+الملفات في: {OUTPUT_DIR}
 """
-
 with open(os.path.join(OUTPUT_DIR, "تقرير_نهائي.txt"), "w", encoding="utf-8") as f:
     f.write(report)
 
-print(f"تم إنشاء المشروع بنجاح! الملفات في: {OUTPUT_DIR}")
+print("تم بنجاح! افتح المجلد:", OUTPUT_DIR)
